@@ -1,0 +1,7 @@
+consider-using-any-or-all:5:4:any_even:`for` loop could be 'any(item % 2 == 0 for item in items)'
+consider-using-any-or-all:12:4:all_even:`for` loop could be 'all(item % 2 == 0 for item in items)'
+consider-using-any-or-all:19:4:any_uneven:`for` loop could be 'not all(item % 2 == 0 for item in items)'
+consider-using-any-or-all:26:4:all_uneven:`for` loop could be 'not any(item % 2 == 0 for item in items)'
+consider-using-any-or-all:33:4:is_from_string:`for` loop could be 'any(isinstance(parent, str) for parent in item.parents())'
+consider-using-any-or-all:40:4:is_not_from_string:`for` loop could be 'not all(isinstance(parent, str) for parent in item.parents())'
+consider-using-any-or-all:49:8:nested_check:`for` loop could be 'not any(item in (1, 2, 3) for item in items)'
